# seo-swarm

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.js  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
scripts/: install.ps1  install.sh
src/seo_swarm/: __init__.py  cli.py
src/seo_swarm/agents/: orchestrator.py  registry.py
src/seo_swarm/ascii/: banners.py  pixel_art.py
src/seo_swarm/backlinks/: engine.py
src/seo_swarm/browser/: engine.py
src/seo_swarm/competitor/: engine.py
src/seo_swarm/content_analyzer/: __init__.py  engine.py
src/seo_swarm/crawler/: __init__.py  engine.py
src/seo_swarm/memory/: engine.py
src/seo_swarm/monitor/: engine.py
src/seo_swarm/reporting/: __init__.py  generator.py
src/seo_swarm/schema_gen/: generator.py
src/seo_swarm/scoring/: __init__.py  engine.py
src/seo_swarm/sitemap/: generator.py
src/seo_swarm/skills/: loader.py
src/seo_swarm/tracker/: engine.py
src/seo_swarm/tui/: __init__.py  dashboard.py  dashboard_v2.py  layout.py  menu.py  notify.py  progress.py  repl.py  spinner.py  themes.py  widgets.py
tests/: test_advanced.py  test_cli.py  test_repl.py
